# MLVapp-Android

./: .gitignore  AGENTS.md  Chunks.md  GEMINI.md  OldMainScreen.kt  README.md  settings.gradle.kts
android_patches/: README.md  apply_all.sh
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/fm/forum/mlvapp/: ExampleInstrumentedTest.kt
app/src/androidTest/java/fm/magiclantern/forum/: ExampleInstrumentedTest.kt
app/src/androidTest/java/fm/magiclantern/forum/export/: EncoderBenchmarkTest.kt  ExportAllCodecsTest.kt  HardwareAccelerationDiagnosticsTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/cpp/jni/: handle_clip.cpp  handle_playback.cpp  jni_cache.cpp  mlv_jni.h  mlv_jni_wrapper.h  mlv_processor_jni.cpp  mlv_processor_jni.h  pixel_focus_map.cpp  utils.cpp  utils.h
app/src/main/cpp/jni/clip/: clip_jni.h  handle_clip.cpp  handle_playback.cpp  jni_cache.cpp  jni_cache.h
app/src/main/cpp/jni/export/: StretchFactors.h  color_grading_options.h  export_handler.cpp  export_handler.h  export_jni.cpp  export_options.h  raw_correction_options.h
app/src/main/cpp/jni/ffmpeg/: batch_export_context.cpp  batch_export_context.h  ffmpeg_audio.cpp  ffmpeg_audio.h  ffmpeg_color_tags.h  ffmpeg_handler.cpp  ffmpeg_handler.h  ffmpeg_presets.cpp  ffmpeg_presets.h  ffmpeg_utils.cpp  ffmpeg_utils.h
app/src/main/cpp/jni/grading/: raw_correction.cpp
app/src/main/cpp/src/: mlvcore.c  mlvcore.h
app/src/main/cpp/src/dng/: dng.c  dng.h
app/src/main/cpp/src/librtprocess/src/: CMakeLists.txt
app/src/main/cpp/src/mlv/: frame_caching.c  mlv_object.h  video_mlv.c  video_mlv.h  video_mlv_misc.c
app/src/main/cpp/src/mlv/llrawproc/: chroma_smooth.c  darkframe.c  darkframe.h  llrawproc.c  llrawproc_object.h  opt_med.h  pixelproc.c
app/src/main/cpp/src/mlv/mcraw/: RawData.cpp  mcraw.c  mcraw.h
app/src/main/cpp/src/processing/: image_profiles.c  processing.c  processing_object.h  raw_processing.c  white_balance.c
app/src/main/java/fm/forum/mlvapp/: AppBar.kt  FilePicker.kt  FocusPixelManager.kt  FocusPixelMapToast.kt  MainActivity.kt  MainScreen.kt  MappStorage.kt  NavController.kt  VideoPlayerView.kt
app/src/main/java/fm/forum/mlvapp/NativeInterface/: NativeLib.kt
app/src/main/java/fm/forum/mlvapp/clips/: ClipFormatters.kt  ClipRepository.kt  ClipViewModel.kt  ClipViewModelFactory.kt
app/src/main/java/fm/forum/mlvapp/data/: Clip.kt  ClipData.kt  ClipFormatters.kt  ClipMetaData.kt  ClipPreviewData.kt  ClipProcessingData.kt  ClipRepository.kt  MLVFile.kt  ProcessingData.kt
app/src/main/java/fm/forum/mlvapp/export/: ExportClipPayload.kt  ExportFdProvider.kt  ExportLocationScreen.kt  ExportOptions.kt  ExportPreferences.kt  ExportProgressScreen.kt  ExportSelectionScreen.kt  ExportService.kt  ExportSettings.kt  ExportSettingsScreen.kt  ExportViewModel.kt  ExportViewModelFactory.kt  ProgressListener.kt
app/src/main/java/fm/forum/mlvapp/settings/: SettingScreen.kt  SettingsRepository.kt  SettingsViewModel.kt
app/src/main/java/fm/forum/mlvapp/videoPlayer/: AudioPlaybackController.kt  MLVRenderer.kt  NavigationBar.kt  PlaybackEngine.kt  VideoPlayerScreen.kt  VideoViewModel.kt  VideoViewModelFactory.kt
app/src/main/java/fm/magiclantern/forum/: AppBar.kt  FilePicker.kt  FocusPixelManager.kt  FocusPixelMapToast.kt  MLVApplication.kt  MainActivity.kt  MainScreen.kt  MappStorage.kt  MobilePanelType.kt  NavController.kt
app/src/main/java/fm/magiclantern/forum/NativeInterface/: NativeLib.kt  RawCorrectionNative.kt
app/src/main/java/fm/magiclantern/forum/clips/: ClipFormatters.kt  ClipRepository.kt  ClipViewModel.kt  ClipViewModelFactory.kt
app/src/main/java/fm/magiclantern/forum/data/: ClipData.kt  ClipMetaData.kt  ClipPreviewData.kt  ClipProcessingData.kt  ProcessingData.kt
app/src/main/java/fm/magiclantern/forum/di/: AppModule.kt  RepositoryModule.kt  SystemInfoProvider.kt
app/src/main/java/fm/magiclantern/forum/export/: ExportClipPayload.kt  ExportFdProvider.kt  ExportLocationScreen.kt  ExportOptions.kt  ExportPreferences.kt  ExportProgressScreen.kt  ExportSelectionScreen.kt  ExportService.kt  ExportSettings.kt  ExportSettingsScreen.kt  ExportViewModel.kt  ExportViewModelFactory.kt  ProgressListener.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/fm/forum/mlvapp/: ExampleUnitTest.kt
app/src/test/java/fm/magiclantern/forum/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
prompts/: context.prompt.md  plan.prompt.md  specify.prompt.md  tasks.prompt.md
(+66 files in other folders)
